FAQ section sub menu alignment corrected

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -364,7 +364,7 @@ h1 {
 
 .sub-panel p {
   padding: auto;
-  margin: 10px 20px;
+  width: 70%;
   font-family: sans-serif;
 }
 
